scss/modules/kcentressearch.scss
// K Centres search form
.views-exposed-form {
  margin-bottom: 1rem;
  margin-top: 30px;
  padding-left: 18px;

  label {
    color: $soft-blue-02;
  }

  .form-item-search-api-fulltext,
  .form-item-keys {
    max-width: 450px;
    width: 70%;

    @media (min-width: #{$screen-md-min}) {
      width: 100%;
    }
  }

  .form-control {
    border: 1px solid $cold-grey-01;
    border-radius: 28px 0 0 28px;
    border-right: 0;
    box-shadow: none;
    color: $dark-blue-01;
    font-size: 16px;
    height: 50px;
    line-height: 30px;
    order: 1;
    padding: 10px 25px;
    width: 100%;

    @media (min-width: #{$screen-sm-min}) {
      font-size: 18px;
    }
  }

  .form-item-items-per-page {
    margin-left: auto;
    order: 4;

    label {
      font-size: 0.938rem;
      padding-right: 5px;
      vertical-align: bottom;

      &::after {
        content: ":";
      }
    }

    select {
      display: inline;
      width: auto;
    }
  }

  .form-submit {
    background: $dark-blue-01 url('../images/search_icon_white.svg') no-repeat 24px center;
    background-size: 20px;
    border: 1px solid $dark-blue-01;
    border-radius: 0 28px 28px 0;
    box-shadow: none;
    height: 58px;
    order: 2;
    padding: 0;
    text-indent: -9999px;
    width: 74px;

    &:hover,
    &:focus {
      background-color: $dark-blue-02;
      outline: none;
    }
  }
  
  .d-flex {
    align-items: end;
  }
}

// Page body:
.view-k-centres-search, .view-search-content {
  .view-content {
    a:not(.btn) {
      color: $link-color;
      text-decoration: underline;

      &:hover {
        color: $soft-blue-01;
      }
    }
  }
}

.page-view-k-centres-search {
  .page-title {
    display: none;
  }

  .page-header {
    background: url("../images/CLARIN-Logo-K-centre-2023-RGB-600ppi-transp.png") no-repeat  left 0 bottom/300px;
    color: $dark-blue-02;
    font-size: 42px;
    height: 80px;
    padding-left: 260px;
    padding-top: 2rem;

    &::after {
      color: #A2C037;
      content: " (PREVIEW version)";
      font-size: 16px;
      vertical-align: super;
    }
  }

  .page-header-text {
    color: $soft-blue-01;
  }

  .k-centre-full-name {
    font-size: 20px;
  }

  div.more-link {
    margin-bottom: 0.6rem;
    margin-top: 0.225rem;

    a.more-link {
      &::after {
        content: " >";
        display: inline-block;
        overflow: hidden;
        padding-left: 3px;
        vertical-align: bottom;
      }

      &:hover::after {
        padding-left: 8px;
        transition: padding 0.2s;
      }
    }
  }

  .node--type-k-centre-profile {
    padding-bottom: 15px;
    padding-top: 5px;
  }
}

// Facets
// Any sidebar
.sidebar {
  .block.block-facets {
    border: 0;
    color: $dark-blue-02;
    margin-bottom: 0;
    padding-bottom: 20px;
    padding-top: 3px;

    .content {
      ul {
        margin-bottom: 8px;
        padding-left: 12px;
      }

      a, .facet-item span.facet-item__value {
        color: $soft-blue-02;
        text-decoration: underline;

        &:hover {
          color: $link-color;
        }
      }

      .facets-soft-limit-link {
        color: $soft-blue-01;
        font-size: 0.938rem;
      }

      li.facet-item {
        list-style: "+ ";

        &:has(label.is-active) {
          list-style: "- ";
        }

        label::first-letter {
          text-transform: uppercase;
        }
      }
    }

    h3 {
      font-size: 1.125rem;
    }
  }

  &:has(.block-facets) {
    @media (min-width: #{$screen-md-min}) {
      padding-top: 26px;
    }
  }

  .block.block-block-content {
    border: 0;
    margin-bottom: 0;
    margin-left: -1rem;
    padding-bottom: 0;

    h3 {
      color: $dark-blue-02;
      font-size: $h2-font-size-h2;
    }
  }
}

// Primary (left) sidebar facet overrides
.sidebar_first:has(.block-facets) {
  // Only render the region when there are facets to display
  display: none;

  .section {
    background-color: $subtle-grey-02;
    border-radius: 4px;
    padding-left: 0.5rem;
  }

  &:has(.block-facets:not(.hidden)) {
    display: block;
  }

  // Override the region width
  @media (min-width: #{$screen-md-min}) {
    flex: 0 0 auto;
    width: 23%;
  }

  // Render facets after content
  @media (max-width: #{$screen-sm-max}) {
    order: 2 !important;
  }
}

// For highlighting search match words
.search-highlight {
  background-color: $search-highlight;
  font-weight: normal;
}

